force-app/main/default/objects/Contact/fields/Contract_Date_Validated__c.field-meta.xml
<CustomField>
    <fullName>Contract_Date_Validated__c</fullName>
    <description>Contract Date Validated</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Date Validated</label>
    <type>Date</type>
</CustomField>