force-app/main/default/objects/Contact/fields/Contract_On_File__c.field-meta.xml
<CustomField>
    <fullName>Contract_On_File__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contract On File?</description>
    <label>Contract On File?</label>
    <type>Checkbox</type>
</CustomField>