force-app/main/default/objects/Contact/fields/Employer_Agreement_Date_Validated__c.field-meta.xml
<CustomField>
    <fullName>Employer_Agreement_Date_Validated__c</fullName>
    <description>Employer Agreement Date Validated</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Employer Agreement Date Validated</label>
    <type>Date</type>
</CustomField>