force-app/main/default/objects/Contact/fields/Employer_Agreement_on_File__c.field-meta.xml
<CustomField>
    <fullName>Employer_Agreement_on_File__c</fullName>
    <description>Employer_Agreement_on_File</description>
    <label>Employer Agreement on File?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Freelancer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>