force-app/main/default/objects/Contact/fields/Primary_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Primary_Specialty__c</fullName>
    <label>Primary Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ENDOCRINOLOGY</fullName>
            </value>
            <value>
                <fullName>PEDIATRIC ENDOCRINOLOGY</fullName>
            </value>
            <value>
                <fullName>INTERNAL MEDICINE</fullName>
            </value>
            <value>
                <fullName>PRIMARY CARE</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>DIABETOLOGE</fullName>
            </value>
            <value>
                <fullName>PADIATER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>