force-app/main/default/objects/Contact/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Values should be given</fullName>
            </value>
            <value>
                <fullName>Lead DSN</fullName>
            </value>
            <value>
                <fullName>Nurse/HCP</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Paeds services</fullName>
            </value>
            <value>
                <fullName>Adult Services</fullName>
            </value>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
            <value>
                <fullName>Head Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>