force-app/main/default/objects/Contact/fields/Training_Certificate_Date_Validated__c.field-meta.xml
<CustomField>
    <fullName>Training_Certificate_Date_Validated__c</fullName>
    <description>Training Certificate Date Validated</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Training Certificate Date Validated</label>
    <type>Date</type>
</CustomField>