force-app/main/default/objects/Contact/fields/Training_Certificate_On_File__c.field-meta.xml
<CustomField>
    <fullName>Training_Certificate_On_File__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Training Certificate On File?</description>
    <label>Training Certificate On File?</label>
    <type>Checkbox</type>
</CustomField>