force-app/main/default/objects/Contact/fields/Training_Preference__c.field-meta.xml
<CustomField>
    <fullName>Training_Preference__c</fullName>
    <label>Training Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Training in Doctors Office</fullName>
            </value>
            <value>
                <fullName>Initial Training by Sales Rep</fullName>
            </value>
            <value>
                <fullName>Initial Training done by Webinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>