force-app/main/default/objects/Contact/fields/Validated_Trainer__c.field-meta.xml
<CustomField>
    <fullName>Validated_Trainer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validated Trainer?</label>
    <type>Checkbox</type>
</CustomField>