force-app/main/default/objects/Contact/recordTypes/AT_Contact.recordType-meta.xml
<RecordType>
    <fullName>AT_Contact</fullName>
    <active>true</active>
    <description>Austria Contacts</description>
    <label>AT Contact</label>
</RecordType>