force-app/main/default/objects/Contact/recordTypes/CA_Contact.recordType-meta.xml
<RecordType>
    <fullName>CA_Contact</fullName>
    <active>true</active>
    <description>Contact Associated with Canadian Organizations.</description>
    <label>CA Contact</label>
</RecordType>