force-app/main/default/objects/Contact/recordTypes/CH_Contact.recordType-meta.xml
<RecordType>
    <fullName>CH_Contact</fullName>
    <active>true</active>
    <description>Switzerland Contacts</description>
    <label>CH Contact</label>
</RecordType>