force-app/main/default/objects/Contact/recordTypes/DE_Contact.recordType-meta.xml
<RecordType>
    <fullName>DE_Contact</fullName>
    <active>true</active>
    <description>Germany Contacts</description>
    <label>DE Contact</label>
</RecordType>