force-app/main/default/objects/Contact/recordTypes/GB_Contact.recordType-meta.xml
<RecordType>
    <fullName>GB_Contact</fullName>
    <active>true</active>
    <label>GB Contact</label>
</RecordType>