force-app/main/default/objects/Contact/recordTypes/IE_Contact.recordType-meta.xml
<RecordType>
    <fullName>IE_Contact</fullName>
    <active>true</active>
    <description>Ireland contacts</description>
    <label>IE Contact</label>
</RecordType>