force-app/main/default/objects/Contact/recordTypes/IE_Pharmacy_Contact.recordType-meta.xml
<RecordType>
    <fullName>IE_Pharmacy_Contact</fullName>
    <active>true</active>
    <label>IE Pharmacy Contact</label>
</RecordType>