force-app/main/default/objects/Contact/recordTypes/SI_Contact.recordType-meta.xml
<RecordType>
    <fullName>SI_Contact</fullName>
    <active>true</active>
    <description>Slovenia Contact</description>
    <label>SI Contact</label>
</RecordType>