force-app/main/default/objects/Contact/listViews/MyContacts.listView-meta.xml
<ListView>
    <fullName>MyContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.IS_PERSON_ACCOUNT</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Contacts</label>
    <language>en_US</language>
</ListView>